Fixed-size for selects using max-width No more overflow in <select /> for long options

--- a/resources/style/remake/advanced-search.scss
+++ b/resources/style/remake/advanced-search.scss
@@ -5,6 +5,7 @@
   max-height: calc(80vh - 3rem);
 
   .criteria-input {
+    max-width: 175px;
     min-width: 175px;
     min-height: 28px;
   }
